Fix bugs, add tests, lower Java target to 11, add LGPL v3 license
- Fix interface dispatch (distance() NPE on interface types)
- Fix missing boolean/byte/short in primitiveToBoxed()
- Fix null argument handling (throw DispatchNoMatchException instead of NPE)
- Make exception constructors public
- Add tests for interface dispatch, missing primitives, and null arguments
- Lower Java source/target from 22 to 11
- Add LGPL v3 license

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>